# sandpile

./: README.md  analysis_script.py  plotting_helper.py  pyproject.toml  sandpile.py  sandpile_gui.py  sandpile_vis.py  tox.ini
.github/workflows/: tests.yaml
tests/: test_sandpile.py
