[tool.poetry]
name = "sandpile"
version = "0.1.0"
description = ""
authors = ["Tim Cooper <timcooper314@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
matplotlib = "^3.4.2"
numpy = "^1.21.1"
scipy = "^1.7.1"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
